added info to sakai.properties for bbb-tool to use test configuration

--- a/work/tomcat/sakaihome/sakai.properties
+++ b/work/tomcat/sakaihome/sakai.properties
@@ -66,3 +66,8 @@ msgcntr.forums.ranks.enable=true
 #force.url.secure=443
 
 search.enable=true
+
+
+#Is the official bbb-tool test configuration provided
+bbb.url=http://test-install.blindsidenetworks.com/bigbluebutton   
+bbb.salt=8cd8ef52e8e101574e400365b55e11a6
